--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
@@ -1,5 +1,4 @@
-﻿@using System.ComponentModel
-@using ChartJs.Blazor.ChartJS.BarChart
+﻿@using ChartJs.Blazor.ChartJS.BarChart
 @using ChartJs.Blazor.ChartJS.Common.Axes
 @using ChartJs.Blazor.ChartJS.Common.Axes.Ticks
 @using ChartJs.Blazor.ChartJS.Common.Enums
@@ -11,95 +10,80 @@
 <div class="row">
 	<button class="btn btn-primary" @onclick="AddData">Add Data</button>
 	<button class="btn btn-primary" @onclick="RemoveData">Remove Data</button>
-	        </div>
-	        <ChartJsBarChart @ref="_barChart"
-	                          Config="@_barChartConfig"
-	                          Width="600"
-	                          Height="300"/>
+</div>
+<ChartJsBarChart @ref="_barChart"
+				 Config="@_barChartConfig"
+				 Width="600"
+				 Height="300"/>
 
-	        @code {
+@code {
 
-		        // https://github.com/Joelius300/ChartJSBlazor/issues/18
-//		        private ReferenceConverter _referenceConverter = new ReferenceConverter(typeof(ChartJsBarChart));
+	private BarConfig _barChartConfig;
+	private ChartJsBarChart _barChart;
+	private BarDataset<DoubleWrapper> _barDataSet;
 
-		        private BarConfig _barChartConfig;
-		        private ChartJsBarChart _barChart;
-		        private BarDataset<DoubleWrapper> _barDataSet;
+	protected override Task OnInitializedAsync() {
+		
+	//Note the constructor argument
+		_barChartConfig = new BarConfig(ChartType.HorizontalBar) {
+			Options = new BarOptions {
+				Title = new OptionsTitle {
+					Display = true,
+					Text = "Simple Bar Chart"
+				},
+				Responsive = true,
+				Scales = new BarScales {
+					XAxes = new List<CartesianAxis> {
+						new LinearCartesianAxis {
+							Ticks = new LinearCartesianTicks {
+								AutoSkip = false,
+								Min = 0 // Otherwise the lowest value in the dataset won't be visible
+							}
+						}
+					}
+				}
+			}
+		};
 
-		        protected override Task OnInitializedAsync()
-		        {
-		        //Note the constructor argument
-			        _barChartConfig = new BarConfig(ChartType.HorizontalBar)
-			        {
-				        Options = new BarOptions
-				        {
-					        Title = new OptionsTitle
-					        {
-						        Display = true,
-						        Text = "Simple Bar Chart"
-					        },
-					        Responsive = true,
-					        Scales = new BarScales
-					        {
-						        XAxes = new List<CartesianAxis>
-						        {
-							        new LinearCartesianAxis
-							        {
-								        Ticks = new LinearCartesianTicks
-								        {
-									        AutoSkip = false,
-									        Min = 0 // Otherwise the lowest value in the dataset won't be visible
-								        }
-							        }
-						        }
-					        }
-				        }
-			        };
+		_barChartConfig.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
 
-			        _barChartConfig.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
+	//Note the constructor argument
+		_barDataSet = new BarDataset<DoubleWrapper>(ChartType.HorizontalBar) {
+			Label = "My double dataset",
+			BackgroundColor = new[] {ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString()},
+			BorderColor = ColorUtil.RandomColorString(),
+			BorderWidth = 1
+		};
 
-		        //Note the constructor argument
-			        _barDataSet = new BarDataset<DoubleWrapper>(ChartType.HorizontalBar)
-			        {
-				        Label = "My double dataset",
-				        BackgroundColor = new[] {ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString()},
-				        BorderColor = ColorUtil.RandomColorString(),
-				        BorderWidth = 1
-			        };
+		_barDataSet.AddRange(new double[] {8, 5, 3, 7}.Wrap());
+		_barChartConfig.Data.Datasets.Add(_barDataSet);
 
-			        _barDataSet.AddRange(new double[] {8, 5, 3, 7}.Wrap());
-			        _barChartConfig.Data.Datasets.Add(_barDataSet);
+		return Task.CompletedTask;
+	}
 
-			        return Task.CompletedTask;
-		        }
+	private void AddData() {
+		var nowSecond = DateTime.Now.Second;
+		_barChartConfig.Data.Labels.Add(nowSecond.ToString());
+		_barDataSet.Add(new DoubleWrapper(nowSecond));
+		_barDataSet.BackgroundColor = _barChartConfig.Data.Labels.Select(l => ColorUtil.RandomColorString()).ToArray();
 
-		        private void AddData()
-		        {
-			        var nowSecond = DateTime.Now.Second;
-			        _barChartConfig.Data.Labels.Add(nowSecond.ToString());
-			        _barDataSet.Add(new DoubleWrapper(nowSecond));
-			        _barDataSet.BackgroundColor = _barChartConfig.Data.Labels.Select(l => ColorUtil.RandomColorString()).ToArray();
+		_barChartConfig.Options.Title.Text += DateTime.Now.Second.ToString();
 
-			        _barChartConfig.Options.Title.Text += DateTime.Now.Second.ToString();
+		_barChart.Update();
+	}
 
-			        _barChart.Update();
-		        }
-
-		        private void RemoveData()
-		        {
-			        if (_barChartConfig.Data.Labels.Count > 0)
-			        {
-				        _barChartConfig.Data.Labels.RemoveAt(_barChartConfig.Data.Labels.Count - 1);
-			        }
+	private void RemoveData() {
+		if (_barChartConfig.Data.Labels.Count > 0) {
+			_barChartConfig.Data.Labels.RemoveAt(_barChartConfig.Data.Labels.Count - 1);
+		}
 
 
-			        if (_barDataSet.Data.Count > 0)
-			        {
-				        _barDataSet.RemoveAt(_barDataSet.Data.Count - 1);
-			        }
+		if (_barDataSet.Data.Count > 0) {
+			_barDataSet.RemoveAt(_barDataSet.Data.Count - 1);
+		}
 
 
-			        _barChart.Update();
-		        }
+		_barChart.Update();
+	}
 
-	        }
+}
