--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/PieChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/PieChartComponent.razor
@@ -1,6 +1,4 @@
-﻿@using System.Collections
-@using System.Globalization
-@using ChartJs.Blazor.ChartJS.Common
+﻿@using System.Globalization
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.PieChart
 @using ChartJs.Blazor.ChartJS.Common.Properties
@@ -12,124 +10,110 @@
 
 
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary" @onclick="AddData">Add data</button>
-                    </div>
-                    <div class="col">
-                        <button class="btn btn-outline-danger" @onclick="RemoveData">Remove data</button>
-                                </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <button class="btn btn-primary" @onclick="AddDataset">Add dataset</button>
-                                                </div>
-                                                <div class="col">
-                                                    <button class="btn btn-outline-danger" @onclick="RemoveDataset">Remove dataset</button>
-                                                            </div>
-                                                            </div>
-                                                            </div>
+	<div class="row">
+		<div class="col">
+			<button class="btn btn-primary" @onclick="AddData">Add data</button>
+		</div>
+		<div class="col">
+			<button class="btn btn-outline-danger" @onclick="RemoveData">Remove data</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			<button class="btn btn-primary" @onclick="AddDataset">Add dataset</button>
+		</div>
+		<div class="col">
+			<button class="btn btn-outline-danger" @onclick="RemoveDataset">Remove dataset</button>
+		</div>
+	</div>
+</div>
 
-                                                            @code {
-                                                                private PieConfig _config;
-                                                                private ChartJsPieChart _pieChartJs;
+@code {
+	private PieConfig _config;
+	private ChartJsPieChart _pieChartJs;
 
-                                                                protected override void OnInitialized()
-                                                                {
-                                                                    _config = new PieConfig
-                                                                    {
-                                                                        Options = new PieOptions
-                                                                        {
-                                                                            Title = new OptionsTitle
-                                                                            {
-                                                                                Display = true,
-                                                                                Text = "Sample chart from Blazor"
-                                                                            },
-                                                                            Responsive = true,
-                                                                            Animation = new ArcAnimation
-                                                                            {
-                                                                                AnimateRotate = true,
-                                                                                AnimateScale = true
-                                                                            }
-                                                                        }
-                                                                    };
+	protected override void OnInitialized() {
+		_config = new PieConfig {
+			Options = new PieOptions {
+				Title = new OptionsTitle {
+					Display = true,
+					Text = "Sample chart from Blazor"
+				},
+				Responsive = true,
+				Animation = new ArcAnimation {
+					AnimateRotate = true,
+					AnimateScale = true
+				}
+			}
+		};
 
-                                                                    _config.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
+		_config.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
 
-                                                                    var pieSet = new PieDataset
-                                                                    {
-                                                                        BackgroundColor = new[] {ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString()},
-                                                                        BorderWidth = 0,
-                                                                        HoverBackgroundColor = ColorUtil.RandomColorString(),
-                                                                        HoverBorderColor = ColorUtil.RandomColorString(),
-                                                                        HoverBorderWidth = 1,
-                                                                        BorderColor = "#ffffff",
-                                                                    };
+		var pieSet = new PieDataset {
+			BackgroundColor = new[] {ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString()},
+			BorderWidth = 0,
+			HoverBackgroundColor = ColorUtil.RandomColorString(),
+			HoverBorderColor = ColorUtil.RandomColorString(),
+			HoverBorderWidth = 1,
+			BorderColor = "#ffffff",
+		};
 
-                                                                    pieSet.Data.AddRange(new double[] {4, 5, 6, 7});
-                                                                    _config.Data.Datasets.Add(pieSet);
-                                                                }
+		pieSet.Data.AddRange(new double[] {4, 5, 6, 7});
+		_config.Data.Datasets.Add(pieSet);
+	}
 
-                                                                private void AddData()
-                                                                {
-                                                                    var dataset = _config.Data.Datasets.LastOrDefault();
-                                                                    if (dataset == null)
-                                                                    {
-                                                                        return;
-                                                                    }
+	private void AddData() {
+		var dataset = _config.Data.Datasets.LastOrDefault();
+		if (dataset == null) {
+			return;
+		}
 
-                                                                    var rand = new Random();
-                                                                    var newVal = 1 + rand.NextDouble() * 10;
-                                                                    _config.Data.Labels.Add(newVal.ToString(CultureInfo.InvariantCulture));
-                                                                    dataset.Data.Add(newVal);
-                                                                    dataset.BackgroundColor = dataset.BackgroundColor.IndexedValues.Append(ColorUtil.RandomColorString()).ToArray();
+		var rand = new Random();
+		var newVal = 1 + rand.NextDouble() * 10;
+		_config.Data.Labels.Add(newVal.ToString(CultureInfo.InvariantCulture));
+		dataset.Data.Add(newVal);
+		dataset.BackgroundColor = dataset.BackgroundColor.IndexedValues.Append(ColorUtil.RandomColorString()).ToArray();
 
-                                                                    _pieChartJs.Update();
-                                                                }
+		_pieChartJs.Update();
+	}
 
-                                                                private void RemoveData()
-                                                                {
-                                                                    var dataset = _config.Data.Datasets.LastOrDefault();
-                                                                    if (dataset == null || dataset.Data.Count < 1)
-                                                                    {
-                                                                        return;
-                                                                    }
+	private void RemoveData() {
+		var dataset = _config.Data.Datasets.LastOrDefault();
+		if (dataset == null || dataset.Data.Count < 1) {
+			return;
+		}
 
-                                                                    _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
-                                                                    dataset.Data.RemoveAt(dataset.Data.Count - 1);
+		_config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
+		dataset.Data.RemoveAt(dataset.Data.Count - 1);
 
-                                                                    _pieChartJs.Update();
-                                                                }
+		_pieChartJs.Update();
+	}
 
-                                                                private void AddDataset()
-                                                                {
-                                                                    var pieSet = new PieDataset
-                                                                    {
-                                                                        BorderWidth = 0,
-                                                                        HoverBackgroundColor = ColorUtil.RandomColorString(),
-                                                                        HoverBorderColor = ColorUtil.RandomColorString(),
-                                                                        HoverBorderWidth = 1,
-                                                                        BorderColor = "#ffffff",
-                                                                    };
+	private void AddDataset() {
+		var pieSet = new PieDataset {
+			BorderWidth = 0,
+			HoverBackgroundColor = ColorUtil.RandomColorString(),
+			HoverBorderColor = ColorUtil.RandomColorString(),
+			HoverBorderWidth = 1,
+			BorderColor = "#ffffff",
+		};
 
-                                                                // determine the number of data points to add
-                                                                    var count = _config.Data.Labels.Count;
+	// determine the number of data points to add
+		var count = _config.Data.Labels.Count;
 
-                                                                    var rand = new Random();
-                                                                    pieSet.Data.AddRange(Enumerable.Range(0, count).Select(i => Convert.ToDouble(rand.Next(0, 10))));
-                                                                    pieSet.BackgroundColor = Enumerable.Range(0, count).Select(i => ColorUtil.RandomColorString()).ToArray();
+		var rand = new Random();
+		pieSet.Data.AddRange(Enumerable.Range(0, count).Select(i => Convert.ToDouble(rand.Next(0, 10))));
+		pieSet.BackgroundColor = Enumerable.Range(0, count).Select(i => ColorUtil.RandomColorString()).ToArray();
 
-                                                                    _config.Data.Datasets.Add(pieSet);
-                                                                    _pieChartJs.Update();
-                                                                }
+		_config.Data.Datasets.Add(pieSet);
+		_pieChartJs.Update();
+	}
 
-                                                                private void RemoveDataset()
-                                                                {
-                                                                    if (_config.Data.Datasets.Count > 1)
-                                                                    {
-                                                                        _config.Data.Datasets.RemoveAt(_config.Data.Datasets.Count - 1);
-                                                                        _pieChartJs.Update();
-                                                                    }
-                                                                }
+	private void RemoveDataset() {
+		if (_config.Data.Datasets.Count > 1) {
+			_config.Data.Datasets.RemoveAt(_config.Data.Datasets.Count - 1);
+			_pieChartJs.Update();
+		}
+	}
 
-                                                            }
+}
